      set in both vectors, separately for each pair of vectors.

   *  Fixed bug in mcxload -etc <file> --expect-values; a logical cascade
      triggered wrong parse branch.

   *  Fixed bug in mcxload -etc / -235 and derived options, where --stream-mirror
      would cause a crash.  Achieve the intended effect e.g. with '-ri max'
      instead.


Fri May 16 2014

   *  mcl-14-137 released. Fix build error under clang.


Fri May 16 2014

   *  mcl-14-136 released.

   *  mcl can subcluster a given clustering. This is achieved by supplying
      the latter as argument to the new -icl option. Edges in the input
      graph that cross clusters will be removed before using the MCL cluster
      algorithm to compute the subclustering.

   *  clm vol can compute node volatility by comparing one set of clusterings
      against another set of clusterings (rather than comparing all against all).
      This is achieved by inserting a "--" separator in the list of filenames.
      The set of clusterings in the files with names to the left are compared
      to those with names to the right of the separator.

   *  clm dist obeys the same convention as clm vol above. That is, if
      a separator "--" is present in the list of filenames, than all
      clusterings specified to the left are compared with all clusterings
      specified to the right.

   *  The mcx query interface has been made less idiosyncratic. Edge weights
      attributes and summary statistics are no longer scaled.

   *  mcx ctty can now also compute edge centrality betweenness (--edge
      option). It can be parallelised using threading across multiple CPUs
      (with -t) and by using multiple machines (with -j and -J).

   *  clm has a new mode 'optics'. It does everything that the OPTICS
      algorithm does short of actually producing a clustering.

      -  It outputs the ordered reachability scores. (coredistance)

      -  It can output the OPTICS landscape visualisation.
